# KRM-Core

./: IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  test_conceptual_sharding.py  test_memory_mapped_pipeline.py
configs/: default.yaml  local_core.yaml  tiny.yaml
krm/: __init__.py  pipeline.py
notebooks/: KRM_Colab_SingleCell.py  KRM_Colab_Train.py  KRM_Colab_Training.ipynb  KRM_Drive_Training.ipynb  KRM_From_Scratch_Training_Colab_Template.md  KRM_From_Scratch_Training_Kaggle_Template.md  KRM_HuggingFace_Training.ipynb
scripts/: benchmark_memory.py  build_echos_training_data.py  build_raw_corpus.py  build_shards.py  build_training_corpus.py  compare_baselines.py  convert_to_rwkv_format.py  dataset_quality_report.py  download_to_drive.py  estimate_training_resources.py  eval_tiny_core.py  evaluate_demo_quality.py  export_tiny_core.py  extract_echos_concepts.py  forge_training_examples.py  ingest_dataset.py  ingest_echos_specs.py  ingest_local.py  ingest_zim.py  ingest_zim_real.py  inspect_data.py  inspect_dataset.py  inspect_shard.py  inspect_zim.py  prepare_hf_dataset.py  process_large_specs.py  process_mega_specs.py  run_query.py  train_conceptual_sharded.py  train_echos_real.py  train_rwkv_bpe.py  train_tiny_core.py  train_tokenizer.py
test_training_output/: concept_map.json
tests/: test_answer_plan_quality.py  test_concept_card.py  test_concept_extractor_quality.py  test_corpus_builder.py  test_curriculum.py  test_dataset_discovery.py  test_dataset_quality_report.py  test_dataset_readers.py  test_dataset_to_article.py  test_demo_quality.py  (+27 more)
(+127 files in other folders)
