[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "krm-core"
version = "0.1.0"
description = "KRM-Core V0: a lightweight local Concept Resonance Engine prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
train = ["torch>=2.0"]

[tool.setuptools.packages.find]
include = ["krm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
